version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/DataModel/Results/ResultDataTable.rst.txt
.. vale off



:class:`ResultDataTable`
========================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.DataModel.Results.ResultDataTable(independents: Iterable[dict[str, Iterable]], dependents: Iterable[dict[str, Iterable]], hiddenColumns: tuple[str])

   Bases: :py:obj:`object`


   
   Specifies the Result Table.
















   ..
       !! processed by numpydoc !!



.. py:currentmodule:: ResultDataTable

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ContainsKey`
            - ContainsKey method.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetEnumerator`
            - GetEnumerator method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.
          * - :py:attr:`~TryGetValue`
            - TryGetValue method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Count`
            - Count property.
          * - :py:attr:`~Dependents`
            - Dependents property.
          * - :py:attr:`~HiddenColumns`
            - HiddenColumns property.
          * - :py:attr:`~Independents`
            - Independents property.
          * - :py:attr:`~Item`
            - Item property.
          * - :py:attr:`~Keys`
            - Keys property.
          * - :py:attr:`~ShowHiddenColumns`
            - ShowHiddenColumns property.
          * - :py:attr:`~Values`
            - Values property.




   .. tab-item:: Special methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__repr__`
            - __repr__ method.




Property detail
---------------
.. py:property:: Count
   :type: Optional[int]


   
   Count property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Dependents
   :type: Optional[dict[str, Iterable]]


   
   Dependents property.
















   ..
       !! processed by numpydoc !!

.. py:property:: HiddenColumns
   :type: Optional[tuple[str]]


   
   HiddenColumns property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Independents
   :type: Optional[dict[str, Iterable]]


   
   Independents property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Item
   :type: Optional[Iterable]


   
   Item property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Keys
   :type: Optional[Iterable[str]]


   
   Keys property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShowHiddenColumns
   :type: Optional[bool]


   
   ShowHiddenColumns property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Values
   :type: Optional[Iterable[Iterable]]


   
   Values property.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: ContainsKey(key: str) -> bool

   
   ContainsKey method.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumerator() -> Iterator[dict[str, Iterable]]

   
   GetEnumerator method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!

.. py:method:: TryGetValue(key: str, value: Iterable) -> bool

   
   TryGetValue method.

   ..
       !! processed by numpydoc !!

.. py:method:: __repr__() -> str

   
   __repr__ method.

   ..
       !! processed by numpydoc !!



.. vale on